@@ -12,7 +12,7 @@ override_dh_auto_clean:
 override_dh_auto_build:
 override_dh_auto_install:
 	for pkg in relational-cli python-relational relational; do \
-	  python debian/$${pkg}.setup.py install --root=$(CURDIR)/debian/$${pkg}; \
+	  python setup/$${pkg}.setup.py install --root=$(CURDIR)/debian/$${pkg}; \
 	  rm -rf build; \
 	done
 
