@@ -1,3 +1,4 @@
+# -*- coding: utf-8 -*-
 from distutils.core import setup
 
 setup(name='relational_gui', packages=('relational_gui',))
