@@ -3,8 +3,9 @@ relational (1.0-1) unstable; urgency=low
   * New upstream release
   * Merged relational-cli upstream, dropped debian patch
   * Using relational_gui.py for both relational and relational-cli packages
+  * Merged various setup.py upstream
 
- -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Fri, 04 Mar 2011 13:28:51 +0100
+ -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Tue, 22 Mar 2011 17:11:28 +0100
 
 relational (0.11-2) unstable; urgency=low
 
